# bms

./: .gitignore  README.md  bq4050_host.py  environment.yml  pyproject.toml  test_bq4050_host.py
docs/: bq4050_protocol.md
src/bmbus_host/: __init__.py  __main__.py  app.py  bridge_server.py
src/bmbus_host/bridges/: __init__.py  ftdi.py  mock.py  placeholder.py  protocol.py  serial.py  server.py  tcp.py
src/bmbus_host/core/: controller.py  labels.py  models.py
src/bmbus_host/ui/: __init__.py  bridge.py  main_window.py  theme.py  widgets.py
src/bmbus_host/ui/qml/: StatCard.qml  main.qml
tests/: conftest.py  test_mock_bridge.py  test_serial_bridge.py  test_tcp_bridge.py
